--- a/jupyter.yml
+++ b/jupyter.yml
@@ -1,4 +1,4 @@
-- hosts: crime
+- hosts: jupyter
   pre_tasks:
     - name: install apt packages
       apt: pkg={{ item }} update_cache=yes cache_valid_time=3600
